[package]
name = "jito-solana-rpc-client"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "jito-solana-rpc-client"
path = "src/main.rs"

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
solana-client = "1.14.10"
solana-sdk = "1.14.10"
solana-account-decoder = "1.14.10"
solana-transaction-status = "1.14.10"
serde_json = "1.0.92"
bs58 = "0.4.0"
base64 = "0.21.0"
thiserror = "1.0.38"
bincode = "1.3.3"
tokio = "~1.14.1"
